# hi-proto

./: .gitignore  CLAUDE.md  Makefile  README.md  buf.gen.dart.yaml  buf.gen.go.yaml  buf.gen.go_http.yaml  buf.yaml  go.mod  http.yaml  merge_http_api_yaml.sh  merge_http_yaml.sh
hi/: common.proto
hi-api-grpc-client/: README.md  pyproject.toml  requirements.txt  setup.py
hi-api-grpc-client/src/hi_api_grpc_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hi-api-grpc-client/src/v1/: hi_pb2.py
hi-api-grpc-client/src/v1/ai/: base_pb2.py  bot_pb2.py  bot_pb2_grpc.py  chat_pb2_grpc.py  health_pb2.py  health_pb2_grpc.py  login_pb2.py  plugin_pb2_grpc.py  setting_pb2_grpc.py  train_pb2.py
hi-api-grpc-client/src/v1/ai/endpoint/: endpoint_pb2.py
hi-api-grpc-client/src/v1/ai/plugin/: plugin_pb2_grpc.py
hi-api-grpc-client/src/v1/club/: base_pb2.py  bot_pb2.py  bot_pb2_grpc.py  login_pb2.py  user_acl_pb2_grpc.py  user_pb2_grpc.py
hi-api-grpc-client/src/v1/club/ai/: train_pb2.py  train_pb2_grpc.py
hi-api-grpc-client/src/v1/club/firebase/: firebase_pb2.py
hi-api-grpc-client/src/v1/club/group/: group_pb2.py
hi-api-grpc-client/src/v1/club/mqtt/: mqtt_pb2.py  mqtt_pb2_grpc.py
hi-api-grpc-client/src/v1/club/tx/: pc_order_pb2_grpc.py  trade_pb2.py  trade_pb2_grpc.py
hi-api-grpc-client/src/v1/did/: admin_pb2.py  admin_pb2_grpc.py  base_pb2_grpc.py  callback_pb2.py  extend_pb2.py  extend_pb2_grpc.py  login_pb2.py  pay_pb2.py  pay_pb2_grpc.py  price_pb2_grpc.py  trans_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
hi-api-grpc-client/src/v1/source/: source_pb2_grpc.py
(+145 files in other folders)
