[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hi-api-grpc-client"
version = "1.0.0"
authors = [{ name = "hi", email = "your.email@example.com" }]
description = "hi-proto项目客户端代码(Python版)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]

dependencies = ["protobuf>=6.33.5", "grpcio>=1.71.0"]

# [project.urls]
# Homepage = "https://github.com/yourusername/hi-service"
# Repository = "https://github.com/yourusername/hi-service"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
test = ["pytest", "pytest-cov"]

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }
include-package-data = true
